# cpp-i18n

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/: pull_request_template.md
.github/workflows/: buildAndTest.yml
assets/locales/en/: test_basic.json  test_parameters.json
assets/locales/fr/: test_basic.json  test_parameters.json
include/: Translator.hpp
include/cpp-i18n/: Translator.hpp
src/: CMakeLists.txt  Translator.cpp
tests/: CMakeLists.txt  basic.cpp  parameters.cpp
tests/src/: basic.cpp  parameters.cpp
